--- a/cupping.html
+++ b/cupping.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Sep 14 2021 06:41:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 25 2021 06:54:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d42ad7a8374fa565098720" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@ drift.load('r73nxaxiv89c');
   <!--  End of Async Drift Code  -->
 </head>
 <body class="ryu_body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
+  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="menu_container wf-section">
       <div class="brand_block">
         <a href="index.html" class="link-block w-inline-block">
@@ -64,9 +64,43 @@ drift.load('r73nxaxiv89c');
       </div>
     </div>
   </div>
-  <a href="#" class="_404_link_block w-inline-block">
-    <div data-w-id="c6c52a2d-3801-e4d1-adf0-d3cbb511c458" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
-  </a>
+  <div class="service_page_section wf-section">
+    <div class="blog_container">
+      <div class="block_text_pre_h2">ACUPUNCTURE</div>
+      <h1 class="section_h1">The best acupuncture Burbank has to offer</h1>
+      <div class="acu_img_block"></div>
+      <h2 class="service_detail_h2">What is cupping?</h2>
+      <p class="service_detail_para">Cupping has been used for thousands of years in traditional Chinese medicine. It is a treatment that increases blood flow and circulation by creating suction on the skin. This helps to reduce pain and speed up recovery time from injury or illness.<br><br>There are several different cupping techniques, but the most common involves cupping glass or ceramic jars over an area where there is pain or muscle strain. The air inside them is sucked out using a fire or a pump, creating a vacuum effect which pulls the skin upwards towards the cup&#x27;s lip.<br><br>After cupping, the skin often looks reddish or bruised. These are called cupping marks and are thought to indicate where the stagnation in the body is located. They can last for up to a week, but cupping will usually leave no permanent mark on the skin.<br><br>Cupping is sometimes carried out alongside acupuncture treatment, but it can also be used by itself. It is nearly always painless, although there may be some mild discomfort when the cups are applied. The patient experiences an immediate sense of relief after cupping because their blood flow has been improved so much more quickly than with other types of treatment.</p>
+      <h2 class="service_detail_h2">What does cupping treat?</h2>
+      <p class="service_detail_para">Acupuncture is known to treat a wide array of conditions thanks to its more than 3,000 years in history. This alternative medicine treatment targets the energy pathways of the body called &quot;meridians.&quot; These acupuncture treatments are based on traditional Chinese medicine (TCM) that treat imbalances in our bodies when certain acupuncture points are stimulated with needles or heat or electricity.<br><br>Acupuncture is used to alleviate many conditions ranging from back pain and infertility to headaches and arthritis. There has been much research demonstrating acupuncture&#x27;s value in treating common aches and pains, anxiety, depression, allergies, fertility issues in women and men, migraines, irritable bowel syndrome (IBS), nausea during chemotherapy treatment for cancer patients, asthma, even drug addiction. The World Health Organization recommends acupuncture as a treatment for over 40 acute and chronic conditions.<br><br>A larger breakdown of conditions treated with acupuncture can be found below:<br></p>
+      <ul role="list" class="conditions_treated_list">
+        <li><strong>Musculoskeletal:</strong> ankle pain, arthritis, bursitis, carpal tunnel syndrome, dental pain, foot pain, frozen shoulder, golfer&#x27;s elbow, hernia, hip pain, injury recovery, knee pain, lower back pain, muscle spasms, neck pain, nerve entrapment syndrome, neuropathies, osteoarthritis, sciatica, sprain / strain, tendonitis, tennis elbow, TMJ syndrome, upper back pain and wrist pain</li>
+        <li><strong>Neurological:</strong> autism, face pain, facial paralysis, headaches, migraines, neuralgia, neurological disorder, rehabilitation, palsy, pinched nerve, post-operative/surgery recovery, stroke, tics, trigeminal neuralgia</li>
+        <li><strong>Chronic Conditions:</strong> cysts, diabetes, high cholesterol/hypercholesterolemia, hepatitis, hypertension (HBP), hypoglycemia, infections, liver diseases, liver fibrosis/cirrhosis, phlebitis, thrombosis, thyroid disorders, tumors</li>
+        <li><strong>Eye, Ear, Nose, Throat:</strong> allergies, dizziness, ear ache, ear ringing, eye problems, hay fever, Meniere&#x27;s disease, rhinitis, sinusitis, sore throat, tonsillitis, vertigo</li>
+        <li><strong>Gynecological, Genitourinary, Reproductive:</strong> breech position, chronic bladder infection, endometriosis, erectile dysfunction, fibroids, hormonal acne, hormone imbalance, hot flashes, inducing birth, infertility, menopause, menstrual irregularities / amenorrhea, miscarriage, morning sickness, premenstrual syndrome (PMS), prenatal issues, polycystic ovarian syndrome (PCOS), sterility</li>
+        <li><strong>Respiratory:</strong> asthma, bronchitis, common cold, emphysema, flu, pneumonia, valley fever</li>
+        <li><strong>Emotional, Psychological:</strong> anxiety, depression, insomnia, panic attacks, restless leg syndrome, seasonal affective disorder (SAD), sleep disturbances, stress</li>
+        <li><strong>Gastrointestinal: </strong>abdominal bloating, abdominal pain, colitis, constipation, diarrhea, dysentery, food allergies, gastritis, heartburn, hemorrhoids, hyperacidity / acid reflux / GERD, indigestion, irritable bowel syndrome (IBS), nausea, ulcers, vomiting</li>
+        <li><strong>Autoimmune Disorders: </strong>Crohn&#x27;s disease, Grave&#x27;s disease, lupus, psoriatic arthritis, rheumatoid arthritis</li>
+        <li><strong>Urological:</strong> incontinence, urinary dysfunction, urinary tract infection (UTI)</li>
+        <li><strong>Immune System: </strong>candida, chronic fatigue, fibromyalgia, multiple sclerosis, weak / imbalanced immune system</li>
+        <li><strong>Dermatological: </strong>acne, eczema, psoriasis</li>
+        <li><strong>Circulatory:</strong> heart conditions, high blood pressure, low blood pressure</li>
+        <li><strong>Addiction:</strong> alcohol, drug abuse, smoking, weight loss</li>
+      </ul>
+      <h2 class="service_detail_h2">Is cupping safe?</h2>
+      <p class="service_detail_para">Acupuncture is an all-natural, drug-free therapy that is safe and effective. According to the World Health Organization, there are no reports of acupuncture being harmful when used appropriately. The stainless steel needles used in acupuncture are pre-sterilized and disposed of after each treatment. The most common side effect is soreness, redness and bruising on the site of needle penetration.<br><br>Acupuncture has one of the best safety records in comparison to other forms of treatment. There has never been a reported case of an acupuncture needle causing infection to the patient. The needles that are used for acupuncture easily break and bend, meaning that if they were inserted incorrectly, they would not cause any harm as the patient would feel discomfort and stop the acupuncturist before insertion was complete.</p>
+      <h2 class="service_detail_h2">Does cupping hurt?</h2>
+      <p class="service_detail_para">Many acupuncture patients are afraid that acupuncture treatment will hurt. However, acupuncture is a painless procedure. The acupuncture needles used to treat muscles aches and pains are very thin (.22 mm) so they can slide through the skin without causing pain or damage. Patients may feel mild pressure when the needle penetrates the skin, but it should not be painful.<br><br>During acupuncture treatment, all acupuncture points are first disinfected with alcohol solution to cleanse them of bacteria and other contaminants that might cause infection if introduced into the patient&#x27;s body. Patients should also note that acupuncture needles are single-use needles, which means they are meant to be disposed of after one use only. This helps reduce the risk of infections from patient to patient.</p>
+      <h2 class="service_detail_h2">Does cupping have side effects?</h2>
+      <p class="service_detail_para">Acupuncture has no true side effects.<br><br>This is because acupuncture uses acupuncture needles, which are much smaller than anesthetic needles and do not pose the same threat as those used by doctors during surgery or for injections. Further, acupuncture points and meridians lie extremely close to each other, so acupuncture does not actually puncture the skin. Acupuncture simply stimulates nerve endings with its fine needles.<br><br>Typically side effects from acupuncture can include bruising and bleeding as a result of improper placement, which will not be a concern with Ryu Acupuncture. Sessions will last about 45 minutes and patients can resume normal activities immediately upon acupuncture treatment. Since acupuncture does not even puncture the skin, side effects are rare and mild compared to many other treatments available today.</p>
+      <h2 class="service_detail_h2">Why choose cupping?</h2>
+      <p class="service_detail_para">The reason you should choose acupuncture as your preferred method of treatment is that acupuncture is safe, effective and has no side effects. Acupuncture&#x27;s success rate is about twenty times higher than that of traditional medicine.<br><br>Acupuncture is not invasive so it does not harm any healthy tissue or organ. Unlike some forms of traditional medicine such as chemotherapy and radiation therapy, acupuncture does not have negative side effects and it poses no threat to life. Acupuncture treats the problem at its source while maintaining a high level of safety for patients. Acupuncture is also economical, as traditional medicine is quite costly.</p>
+      <h2 class="service_detail_h2">Will insurance cover my cupping treatments?</h2>
+      <p class="service_detail_para">At Ryu Acupuncture Clinic, we accept most plans in and out-of-network insurance. Please call to see if your benefits apply.</p>
+    </div>
+  </div>
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
