--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 06:49:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 01 2021 13:42:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -131,8 +131,8 @@ drift.load('r73nxaxiv89c');
         <div class="_2_block">
           <h2 class="services_content_h3">Moxibustion</h2>
           <p class="services_para">Moxibustion is a form of therapy in which dried mugwort plant materials called &quot;moxa&quot; are burned on or near the surface of the skin. The intent is to invigorate the flow of Qi in the body and remove certain pathogenic influences. </p>
-          <p class="services_para">In Traditional Chinese Medicine, stimulating the flow of Qi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of chi contribute to physical and mental health problems.</p>
-          <p class="services_para">Because fire (<em>Yang</em>) is its central element, moxibustion is most often used to dispel cold stagnation (<em>Yin</em>) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
+          <p class="services_para">In Traditional Chinese Medicine, stimulating the flow of Qi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of Qi contribute to physical and mental health problems.</p>
+          <p class="services_para">Because fire (<em class="italic-text-2">Yang</em>) is its central element, moxibustion is most often used to dispel cold stagnation (<em class="italic-text">Yin</em>) and the conditions that arise as a result. Moxibustion is often used in lieu of acupuncture as it stimulates the same meridian points. This makes it a great alternative treatment for those with a fear of needles.</p>
         </div>
       </div>
       <div class="_2_block_row">
